<resources>
    <string name="app_name">FALL2020Team04Sec01_EaseMyNotes</string>
    <string name="login">LOGIN</string>
    <string name="logo">logo</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="easemynotes">EaseMyNotes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="homelogin">LOGIN</string>
    <string name="not_registered">not_registered?</string>
    <string name="register">REGISTER</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="email_id">email id</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">SUBMIT</string>
</resources>