<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#FAFCAB">

    <TextView
        android:id="@+id/tv_createaccount"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="32dp"
        android:text="@string/create_account"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:hint="@string/first_name"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/last_name"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email_id"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"/>



</LinearLayout>