<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="#FAFCAB"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_easemynotes"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:textSize="32sp"
        android:text="@string/easemynotes"
        />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/ic_baseline_account_circle_24"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btn_homeLogin"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/homelogin"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_notregister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:text="@string/register"/>

    </LinearLayout>

</LinearLayout>