<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAFCAB"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:contentDescription="@string/logo"
        android:layout_marginTop="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/logo"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tv_notregister"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/don_t_have_an_account"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_mainregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"/>

</LinearLayout>